--- a/scenes/login.fxml
+++ b/scenes/login.fxml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.web.WebView?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="227.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fantasia.controller.LoginController" fx:id="root">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="518.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fantasia.controller.LoginController">
    <children>
-      <TextField fx:id="userInput" layoutX="103.0" layoutY="47.0" />
-      <PasswordField fx:id="passInput" layoutX="103.0" layoutY="89.0" />
-      <Hyperlink fx:id="getPassword" layoutX="22.0" layoutY="124.0" prefHeight="23.0" prefWidth="300.0" text="Get your password here (login with your bot profile)" />
-      <Button fx:id="submit" layoutX="14.0" layoutY="180.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="128.0" text="Login" />
-      <CheckBox fx:id="saveLogin" layoutX="151.0" layoutY="187.0" mnemonicParsing="false" text="Keep signed in" />
-      <Label layoutX="26.0" layoutY="51.0" text="Username:" />
-      <Label layoutX="26.0" layoutY="93.0" text="Password:" />
-      <Label fx:id="error" layoutX="29.0" layoutY="147.0" prefHeight="17.0" prefWidth="111.0" text="Error: Couldn't login" textFill="RED" visible="false" />
+      <WebView fx:id="loginPage" prefHeight="520.0" prefWidth="354.0" />
    </children>
 </Pane>
